# mecanight_demo

./: base_controller.rules  imu.rules  ld_lidar.rules  lidar.rules
ldlidar/launch/: ldlidar.launch.py
src/bogie_bringup/: package.xml  setup.cfg  setup.py
src/bogie_bringup/bogie_bringup/: base_controller.py  calibrate.py
src/bogie_bringup/launch/: bringup.launch.py
src/bogie_description/: package.xml  setup.cfg  setup.py
src/bogie_description/launch/: display.launch.py  gazebo.launch.py
src/bogie_description/meshes/: base_laser_Link.STL  base_link.STL  imu_link.STL  wheel_1_link.STL  wheel_3_Link.STL
src/bogie_description/urdf/: bogie.gazebo  bogie.trans  bogie_description.urdf  materials.xacro
src/bogie_interfaces/bogie_interfaces/: CMakeLists.txt  package.xml
src/bogie_interfaces/bogie_interfaces/msg/: FeedbackPulse.msg  RobotSpeed.msg  SerialData.msg  TargetPulse.msg
src/bogie_navigation/: maps.pgm  maps.yaml  package.xml  setup.cfg  setup.py
src/bogie_navigation/bogie_navigation/: cafe_2.py  cafe_demo.py  cafe_gogo_test.py  cafe_night.py  led.py  led_status.py  mp_demo.py  nav_command_test.py  navigation_command.py  qr_code.py  robot_navigator.py  teleop.py  teleop_holomonic.py  webcam.py
src/bogie_navigation/config/: cartographer.lua  cartographer.rviz  ekf.yaml  nav2_DWB_params.yaml  nav2_MPPI_params.yaml  nav2_RPPC_params.yaml  nav2_RSC_params.yaml  (+2 more)
src/cv_basics/: package.xml  setup.py
src/ekf_ros2/: package.xml  setup.cfg  setup.py
src/ros2_laser_scan_matcher-main/: CMakeLists.txt
src/serial_imu/: CMakeLists.txt  package.xml
(+53 files in other folders)
